--- a/index.html
+++ b/index.html
@@ -4,47 +4,10 @@
         <meta charset="utf-8">
         <title>WinnersEducationBR</title>
         <link rel="stylesheet" type="text/css" href="css.css">
+        <link rel="shortcut icon" href="img/logo-winners-icon.png" type="image/x-icon">
         <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400&display=swap" rel="stylesheet">	
-        <script>
-          // pegamos o valor no localStorage
-          const nightMode = document.querySelector('#night-mode')
-          // ao clicar mudaremos as cores
-          nightMode.addEventListener('click', () => {
-            // adiciona a classe `night-mode` ao html
-            document.documentElement.classList.toggle('night-mode')
-          })
-          const nightModeStorage = localStorage.getItem('gmtNightMode')
-          const nightMode = document.querySelector('#night-mode')
-
-          // caso tenha o valor no localStorage
-          if (nightModeStorage) {
-            // ativa o night mode
-            document.documentElement.classList.add('night-mode')
-
-            // já deixa o input marcado como ativo
-            nightMode.checked = true
-          }
-
-          // ao clicar mudaremos as cores
-          nightMode.addEventListener('click', () => {
-            // adiciona a classe `night-mode` ao html
-            document.documentElement.classList.toggle('night-mode')
-
-            // se tiver a classe night-mode
-            if (document.documentElement.classList.contains('night-mode')) {
-              // salva o tema no localStorage
-              localStorage.setItem('gmtNightMode', true)
-              return
-            }
-            // senão remove
-            localStorage.removeItem('gmtNightMode')
-          })
-        </script>
     </head>
     <body>
-      <div id="popup-wp" class="popup-wp">
-        <a href="javascript: fechar();">✕</a><br>			
-      </div>
         <div class="total">
             <div id="ancora-1" class="box-top">
 
@@ -75,7 +38,6 @@
                                     <li class="item-s"><a href="cursos.html">Cursos WinnersPRO</a></li>
                                 </ul>
                             </li>
-                            <li class="item-p"><a href="estude.html" class="lx">Seja um Winner</a></li>
                             <li class="item-p"><a href="contato.html" class="lx">Contato</a></li>
                             <li class="item-p-i"><a href="login.html">Portal do Aluno | EAD</a></li>
                         </ul>
@@ -154,6 +116,8 @@
                     na educação para resolver obstáculos de aprendizagem.<br>
                     &nbsp;&nbsp;Por isso, o portal do aluno conta com diversas funcionalidades, entre elas: rotina de estudos, videoaulas, 
                     exercícios e simulados, além de monitorias on-line.
+                    <br>
+                    <a href="login.html">Acessar o portal.</a>
                   </p>
                 </div>
                 <div class="sub-mdl-2-2"></div>
@@ -207,7 +171,6 @@
                       <li><a href="ef2.html" class="link-c">-Ensino Fundamental II</a></li>
                       <li><a href="em.html" class="link-c">-Ensino Médio</a></li>
                       <li><a href="cursos.html" class="link-c">-WinnersPRO</a></li><br/>
-                      <li><a href="estude.html" class="link-c">SEJA UM WINNER</a></li><br/>
                       <li><a href="contato.html" class="link-c">CONTATO</a></li><br/>
                       <li><a href="login.html" class="link-c">PORTAL DO ALUNO</a></li><br/>
                       <li><a></a></li>
@@ -216,7 +179,7 @@
                   <div class="ctt-rd">
                     <ul class="ctt-rd-ul-1">
                       <li><a></a><img src="img/logo-winners-light.svg" width="260px" height="60px" class="img-rd"></li><br/>
-                      <li><a href="https://www.facebook.com/winnersedu_" class="link-c"><img src="img/face-light.svg" width="15px" height="15px" style="padding-right:5px;">facebook.com/winnersedu_</a></li><br/>
+                      <li><a href="https://www.facebook.com/winnerseduca" class="link-c"><img src="img/face-light.svg" width="15px" height="15px" style="padding-right:5px;">facebook.com/winnerseduca</a></li><br/>
                       <li><a href="https://www.instagram.com/winnersedu_" class="link-c"><img src="img/insta-light.svg" width="15px" height="15px" style="padding-right:5px;">instagram.com/winnersedu_</a></li><br/>
                       <li><a href="https://www.twitter.com/winnersedu_" class="link-c"><img src="img/tt-light.svg" width="15px" height="15px" style="padding-right:5px;">twitter.com/Winnersedu_</a></li><br/>
                   </ul>
