--- a/pilares.html
+++ b/pilares.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>WinnersEducationBR</title>
         <link rel="stylesheet" type="text/css" href="css.css">
+        <link rel="shortcut icon" href="img/logo-winners-icon.png" type="image/x-icon">
         <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400&display=swap" rel="stylesheet">
     </head>
     <body>
@@ -37,7 +38,6 @@
                                     <li class="item-s"><a href="cursos.html">Cursos WinnersPRO</a></li>
                                 </ul>
                             </li>
-                            <li class="item-p"><a href="estude.html" class="lx">Seja um Winner</a></li>
                             <li class="item-p"><a href="contato.html" class="lx">Contato</a></li>
                             <li class="item-p-i"><a href="login.html">Portal do Aluno | EAD</a></li>
                         </ul>
@@ -123,7 +123,6 @@
                         <li><a href="ef2.html" class="link-c">-Ensino Fundamental II</a></li>
                         <li><a href="em.html" class="link-c">-Ensino Médio</a></li>
                         <li><a href="cursos.html" class="link-c">-WinnersPRO</a></li><br/>
-                        <li><a href="estude.html" class="link-c">SEJA UM WINNER</a></li><br/>
                         <li><a href="contato.html" class="link-c">CONTATO</a></li><br/>
                         <li><a href="login.html" class="link-c">PORTAL DO ALUNO</a></li><br/>
                         <li><a></a></li>
@@ -132,7 +131,7 @@
                   <div class="ctt-rd">
                     <ul class="ctt-rd-ul-1">
                       <li><a></a><img src="img/logo-winners-light.svg" width="260px" height="60px" class="img-rd"></li><br/>
-                      <li><a href="https://www.facebook.com/winnersedu_" class="link-c"><img src="img/face-light.svg" width="15px" height="15px" style="padding-right:5px;">facebook.com/winnersedu_</a></li><br/>
+                      <li><a href="https://www.facebook.com/winnerseduca" class="link-c"><img src="img/face-light.svg" width="15px" height="15px" style="padding-right:5px;">facebook.com/winnerseduca</a></li><br/>
                       <li><a href="https://www.instagram.com/winnersedu_" class="link-c"><img src="img/insta-light.svg" width="15px" height="15px" style="padding-right:5px;">instagram.com/winnersedu_</a></li><br/>
                       <li><a href="https://www.twitter.com/winnersedu_" class="link-c"><img src="img/tt-light.svg" width="15px" height="15px" style="padding-right:5px;">twitter.com/Winnersedu_</a></li><br/>
                   </ul>
