--- a/sobre.html
+++ b/sobre.html
@@ -2,9 +2,10 @@
 <html>
     <meta charset="utf-8">
     <head>
-            <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+        <link rel="shortcut icon" href="img/logo-winners-icon.png" type="image/x-icon">
         <title>Sobre Nós</title>
-            <link rel="stylesheet" type="text/css" href="css.css">
+        <link rel="stylesheet" type="text/css" href="css.css">
     </head>
     <body>
         <div id="total">
@@ -37,7 +38,6 @@
                                     <li class="item-s"><a href="cursos.html">Cursos WinnersPRO</a></li>
                                 </ul>
                             </li>
-                            <li class="item-p"><a href="estude.html" class="lx">Seja um Winner</a></li>
                             <li class="item-p"><a href="contato.html" class="lx">Contato</a></li>
                             <li class="item-p-i"><a href="login.html">Portal do Aluno | EAD</a></li>
                         </ul>
@@ -48,45 +48,30 @@
                      <div class="sobre-texto">
                         
                         <div class="timeline">
-                            <div class="container left">
-                              <div class="content">
-                                <h2>2015</h2>
-                                <p align="center">Pesquisa nos ambientes escolares, com responsáveis legais e alunos de outras instituições
-                                    para o desenvolvimento do projeto.</p>
-                              </div>
-                            </div>
-
-                            <div class="container right">
-                              <div class="content">
-                                <h2>2016</h2>
-                                <p align="center">Início da idealização desde a estrutura (Diagramas: Use-Case, ER, Classe; Projeção de um mundo real: Mini-mundo) 
-                                    à implementação final (desenvolvimento do projeto, com a criação das logos, banners).</p>
-                              </div>
-                            </div>
 
                             <div class="container left">
                                 <div class="content">
                                   <h2>2017</h2>
-                                  <p align="center"> Parcerias com empresas como o Google For Education para levar
-                                      um servidor com latência baixa e ferramentas desenvolvidas para educação a distância
-                                      e presencial.
-                                  </p>
+                                  <p align="justify">&nbsp;&nbsp;Pesquisa nos ambientes escolares, com responsáveis legais e alunos de outras instituições
+                                    para o desenvolvimento do projeto.</p>
                                 </div>
                               </div>
 
                               <div class="container right">
                                 <div class="content">
                                   <h2>2018</h2>
-                                  <p align="center">Desenvolvimento da plataforma digital (Legacy Student)
-                                       e criação do banco de dados do colégio para comportar mais Winners.  </p>
+                                  <p align="justify">&nbsp;&nbsp;&nbsp;Parcerias com empresas como a Google para levar
+                                    um servidor com baixa latência e ferramentas desenvolvidas para educação a distância
+                                    e presencial.
+                                </p>
                                 </div>
                               </div>
 
                               <div class="container left">
                                 <div class="content">
                                   <h2>2019</h2>
-                                  <p align="center">Implementação do projeto, criando a WinnersEducation,
-                                       comportando curso normal (Conteúdo didático: Matemática, geografia, história...)
+                                  <p align="justify">&nbsp;&nbsp;&nbsp;Desenvolvimento da plataforma digital (Winners Academy)
+                                    e assim, criando a WinnersEducation, comportando curso normal (Curso normal: Matemática, geografia, história...)
                                      e WinnersPRO (Cursos técnicos: Designer gráfico, línguas, fotografia e etc).</p>
                                 </div>
                               </div>
@@ -134,7 +119,6 @@
                           <li><a href="ef2.html" class="link-c">-Ensino Fundamental II</a></li>
                           <li><a href="em.html" class="link-c">-Ensino Médio</a></li>
                           <li><a href="cursos.html" class="link-c">-WinnersPRO</a></li><br/>
-                          <li><a href="estude.html" class="link-c">SEJA UM WINNER</a></li><br/>
                           <li><a href="contato.html" class="link-c">CONTATO</a></li><br/>
                           <li><a href="login.html" class="link-c">PORTAL DO ALUNO</a></li><br/>
                           <li><a></a></li>
@@ -143,7 +127,7 @@
                       <div class="ctt-rd">
                         <ul class="ctt-rd-ul-1">
                           <li><a></a><img src="img/logo-winners-light.svg" width="260px" height="60px" class="img-rd"></li><br/>
-                          <li><a href="https://www.facebook.com/winnersedu_" class="link-c"><img src="img/face-light.svg" width="15px" height="15px" style="padding-right:5px;">facebook.com/winnersedu_</a></li><br/>
+                          <li><a href="https://www.facebook.com/winnerseduca" class="link-c"><img src="img/face-light.svg" width="15px" height="15px" style="padding-right:5px;">facebook.com/winnerseduca</a></li><br/>
                           <li><a href="https://www.instagram.com/winnersedu_" class="link-c"><img src="img/insta-light.svg" width="15px" height="15px" style="padding-right:5px;">instagram.com/winnersedu_</a></li><br/>
                           <li><a href="https://www.twitter.com/winnersedu_" class="link-c"><img src="img/tt-light.svg" width="15px" height="15px" style="padding-right:5px;">twitter.com/Winnersedu_</a></li><br/>
                       </ul>
