--- a/estude.html
+++ b/estude.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>WinnersEducationBR</title>
         <link rel="stylesheet" type="text/css" href="css.css">
+        <link rel="shortcut icon" href="img/logo-winners-icon.png" type="image/x-icon">
         <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400&display=swap" rel="stylesheet">
     </head>
     <body>
@@ -37,16 +38,32 @@
                                     <li class="item-s"><a href="cursos.html">Cursos WinnersPRO</a></li>
                                 </ul>
                             </li>
-                            <li class="item-p"><a href="estude.html" class="lx">Seja um Winner</a></li>
                             <li class="item-p"><a href="contato.html" class="lx">Contato</a></li>
                             <li class="item-p-i"><a href="login.html">Portal do Aluno | EAD</a></li>
                         </ul>
                     </nav>
                 </div>
             </div>
-            <div class="module-et-1"></div>
-            <div class="module-et-2"></div>
-            <div class="module-et-3"></div>
+
+                <div class="module-etd-1">
+                    <h1>Por quê estudar na Winners Education?</h1>
+                    <div class="align-sub-mdl-etd-1">
+                      <div class="sub-mdl-etd-1-1">
+                        <h1>Qualidade de ensino.</h1>
+                        <p>Buscamos entregar o melhor do ensino para nossos alunos, </p>
+                      </div>
+                      <div class="sub-mdl-etd-1-2">
+                        <h1>Plataforma moderna.</h1>
+                        <p></p>
+                    </div>
+                    <div class="sub-mdl-etd-1-3">
+                        <h1>Cursos Profissionalizantes.</h1>
+                        <p></p>
+                    </div>
+                </div>
+                  
+            </div>
+            
             <div class="module-r">
 
                 <div class="mdl-r-1">
@@ -80,7 +97,6 @@
                         <li><a href="ef2.html" class="link-c">-Ensino Fundamental II</a></li>
                         <li><a href="em.html" class="link-c">-Ensino Médio</a></li>
                         <li><a href="cursos.html" class="link-c">-WinnersPRO</a></li><br/>
-                        <li><a href="estude.html" class="link-c">SEJA UM WINNER</a></li><br/>
                         <li><a href="contato.html" class="link-c">CONTATO</a></li><br/>
                         <li><a href="login.html" class="link-c">PORTAL DO ALUNO</a></li><br/>
                         <li><a></a></li>
@@ -89,7 +105,7 @@
                   <div class="ctt-rd">
                     <ul class="ctt-rd-ul-1">
                       <li><a></a><img src="img/logo-winners-light.svg" width="260px" height="60px" class="img-rd"></li><br/>
-                      <li><a href="https://www.facebook.com/winnersedu_" class="link-c"><img src="img/face-light.svg" width="15px" height="15px" style="padding-right:5px;">facebook.com/winnersedu_</a></li><br/>
+                      <li><a href="https://www.facebook.com/winnerseduca" class="link-c"><img src="img/face-light.svg" width="15px" height="15px" style="padding-right:5px;">facebook.com/winnerseduca</a></li><br/>
                       <li><a href="https://www.instagram.com/winnersedu_" class="link-c"><img src="img/insta-light.svg" width="15px" height="15px" style="padding-right:5px;">instagram.com/winnersedu_</a></li><br/>
                       <li><a href="https://www.twitter.com/winnersedu_" class="link-c"><img src="img/tt-light.svg" width="15px" height="15px" style="padding-right:5px;">twitter.com/Winnersedu_</a></li><br/>
                   </ul>
